# CCraft

./: CMakeLists.txt  README.md  build.sh  launcher  main.c
.github/workflows/: wasm.yml
assets/3d_models/dirt/: dirt.mtl
assets/3d_models/grass/: grass.mtl
assets/3d_models/stone/: stone.mtl
src/: block.h  controls.c  controls.h  obj.c  obj.h  player.c  player.h  world.c  world.h
